@@ -471,6 +471,17 @@
           inline="False"
           insert-after="*"/>
 
+    <javascript authenticated="False"
+          id="++resource++bika.lims.js/bika.lims.calculation.edit.js"
+          cacheable="True"
+          compression="safe"
+          conditionalcomment=""
+          cookable="True"
+          enabled="on"
+          expression=""
+          inline="False"
+          insert-after="*"/>
+
   <!-- Add javascripts ALWAYS BEFORE this one -->
   <javascript authenticated="False"
               id="++resource++bika.lims.js/bika.lims.loader.js"
